--- a/Personal_Notebook_of_Bank_Marketing_Effectiveness_Prediction_Capstone_Project(Prabhat).ipynb
+++ b/Personal_Notebook_of_Bank_Marketing_Effectiveness_Prediction_Capstone_Project(Prabhat).ipynb
@@ -4503,11 +4503,11 @@
         "\n",
         "*** So basically those clients who had taken the product in the last campaign should be focussed more as they have high probability of taking term deposit**\n",
         "\n",
-        "*** Those who have Cellurar contact communication type are in very high probability of taking term deposit.**\n",
+        "*** Those who have Cellular contact communication type are in very high probability of taking term deposit.**\n",
         "\n",
         "*** Most of the folks who have taken the term deposit had been talked last time in month of March,which is not making sense techniqually.But we can say that it may be due to March month is last month of financial year.**\n",
         "\n",
-        "*** XGBoost is showing the best Accuracy,Precision,Recall and very good Train and Test score with Low BIAS and Low VARIANCE.**\n",
+        "*** XGBoost is showing the best Accuracy, Precision, Recall and very good Train and Test score with Low BIAS and Low VARIANCE.**\n",
         "\n",
         "*** Different models are summarized in table below.** "
       ]
